[package]

name = "pathmatch"
version = "0.1.2"
authors = ["Eugene Homyakov <ehomyakov@gmail.com>"]
license = "MIT"

description = "A better version of `fnmatch()`, supporting `**` like `.gitignore`"
repository = "https://github.com/hamstergene/pathmatch"

readme = "README.md"
keywords = ["fnmatch", "glob", "gitignore"]

[lib]

name = "pathmatch"

